--- a/Phones_And_People/Web.config
+++ b/Phones_And_People/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="PeopleDb" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Players;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PeopleDb" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFileName=|DataDirectory|\PeopleDb.mdf;Initial Catalog=Players;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,6 +18,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+
+	  <authentication mode="Forms">
+		  <forms name="auth" timeout="2880" loginUrl="~/Account/Login" />
+	  </authentication> 
+	  
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
